--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
 
     <!-- Google Fonts -->
@@ -17,7 +18,7 @@
   </head>
 
   <body>
-    <!-- ================= HEADER ================= -->
+    <!-- ===== HEADER ===== -->
     <header>
       <nav>
         <a href="./index.html" class="logo">
@@ -25,42 +26,47 @@
         </a>
 
         <ul>
-          <li><a href="#" class="nav-link">Studio</a></li>
-          <li><a href="#" class="nav-link">Portfolio</a></li>
-          <li><a href="#" class="nav-link">Contacts</a></li>
+          <li>
+            <a href="./index.html" class="nav-link">Studio</a>
+          </li>
+          <li>
+            <a href="" class="nav-link">Portfolio</a>
+          </li>
+          <li>
+            <a href="" class="nav-link">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <address class="address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address-link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="address-link">
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-link"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111" class="address-link">
+              +11 (000) 111-11-11
+            </a>
           </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <!-- ================= HERO ================= -->
+      <!-- ===== HERO ===== -->
       <section class="hero">
         <h1 class="hero-title">
-          Effective Solutions for Your Business
+          Effective Solutions<br />
+          for Your Business
         </h1>
-        <button type="button" class="hero-button">
-          Order Service
-        </button>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
 
-      <!-- ================= ADVANTAGES ================= -->
-      <section class="advantages">
-        <h2 class="visually-hidden">Advantages</h2>
+      <!-- ===== ADVANTAGES ===== -->
+      <section>
+        <h2 class="section-title">Our Advantages</h2>
 
         <ul>
           <li>
@@ -70,6 +76,7 @@
               perfect and creative solution.
             </p>
           </li>
+
           <li>
             <h3 class="advantages-subtitle">Punctuality</h3>
             <p class="advantages-text">
@@ -77,6 +84,7 @@
               within the shortest possible time.
             </p>
           </li>
+
           <li>
             <h3 class="advantages-subtitle">Diligence</h3>
             <p class="advantages-text">
@@ -84,6 +92,7 @@
               opportunities and minimize risk.
             </p>
           </li>
+
           <li>
             <h3 class="advantages-subtitle">Technologies</h3>
             <p class="advantages-text">
@@ -94,9 +103,8 @@
         </ul>
       </section>
 
-      <!-- ================= TEAM ================= -->
+      <!-- ===== TEAM ===== -->
       <section class="team">
-        <!-- 🔥 ОЦЕ КЛЮЧОВА ПРАВКА -->
         <h2 class="section-title">Our Team</h2>
 
         <ul class="team-list">
@@ -143,11 +151,12 @@
       </section>
     </main>
 
-    <!-- ================= FOOTER ================= -->
+    <!-- ===== FOOTER ===== -->
     <footer class="footer">
       <a href="./index.html" class="footer-logo">
         Web<span class="logo-studio">Studio</span>
       </a>
+
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
