--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <a href="./index.html" class="nav-link">Studio</a>
           </li>
           <li>
-            <a href="./index.html" class="nav-link">Portfolio</a>
+            <a href="" class="nav-link">Portfolio</a>
           </li>
           <li>
-            <a href="./index.html" class="nav-link">Contacts</a>
+            <a href="" class="nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -41,14 +41,14 @@
       <address class="address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address-link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="address-link">
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-link"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111" class="address-link">
+              +11 (000) 111-11-11
+            </a>
           </li>
         </ul>
       </address>
@@ -57,13 +57,17 @@
     <main>
       <!-- ===== HERO ===== -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <h1 class="hero-title">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="hero-button">
+          Order Service
+        </button>
       </section>
 
-      <!-- ===== ADVANTAGES (2 секція) ===== -->
-      <section>
-        <h2 class="visually-hidden">Advantages</h2>
+      <!-- ===== ADVANTAGES (2nd section) ===== -->
+      <section class="advantages">
+        <h2 class="visually-hidden">Our Advantages</h2>
 
         <ul>
           <li>
@@ -100,9 +104,9 @@
         </ul>
       </section>
 
-      <!-- ===== TEAM (3 секція) ===== -->
+      <!-- ===== TEAM (3rd section) ===== -->
       <section class="team">
-        <h2 class="hero-title">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
 
         <ul class="team-list">
           <li class="team-item">
@@ -145,6 +149,11 @@
             <p class="team-position">UI Designer</p>
           </li>
         </ul>
+      </section>
+
+      <!-- ===== PORTFOLIO (4th section) ===== -->
+      <section>
+        <h2 class="section-title">Our Portfolio</h2>
       </section>
     </main>
 
