--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>WebStudio</title>
 
     <!-- Google Fonts -->
@@ -19,13 +20,13 @@
 
   <body>
     <!-- ===== HEADER ===== -->
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="nav">
         <a href="./index.html" class="logo">
           Web<span class="logo-studio">Studio</span>
         </a>
 
-        <ul>
+        <ul class="nav-list">
           <li>
             <a href="./index.html" class="nav-link">Studio</a>
           </li>
@@ -39,7 +40,7 @@
       </nav>
 
       <address class="address">
-        <ul>
+        <ul class="address-list">
           <li>
             <a href="mailto:info@devstudio.com" class="address-link">
               info@devstudio.com
@@ -60,17 +61,15 @@
         <h1 class="hero-title">
           Effective Solutions for Your Business
         </h1>
-        <button type="button" class="hero-button">
-          Order Service
-        </button>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
 
-      <!-- ===== ADVANTAGES (2nd section) ===== -->
+      <!-- ===== ADVANTAGES (2 SECTION) ===== -->
       <section class="advantages">
         <h2 class="visually-hidden">Our Advantages</h2>
 
-        <ul>
-          <li>
+        <ul class="advantages-list">
+          <li class="advantages-item">
             <h3 class="advantages-subtitle">Strategy</h3>
             <p class="advantages-text">
               Our goal is to identify the business problem to walk away with the
@@ -78,7 +77,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-subtitle">Punctuality</h3>
             <p class="advantages-text">
               Bring the key message to the brand's audience for the best price
@@ -86,7 +85,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-subtitle">Diligence</h3>
             <p class="advantages-text">
               Research and confirm brands with the strongest digital growth
@@ -94,7 +93,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-subtitle">Technologies</h3>
             <p class="advantages-text">
               Design practice focused on digital experiences. We bring forth a
@@ -104,8 +103,9 @@
         </ul>
       </section>
 
-      <!-- ===== TEAM (3rd section) ===== -->
+      <!-- ===== TEAM (3 SECTION) ===== -->
       <section class="team">
+        <!-- 🔴 ВАЖЛИВО: той самий клас, що і в секції 2 -->
         <h2 class="section-title">Our Team</h2>
 
         <ul class="team-list">
@@ -149,11 +149,6 @@
             <p class="team-position">UI Designer</p>
           </li>
         </ul>
-      </section>
-
-      <!-- ===== PORTFOLIO (4th section) ===== -->
-      <section>
-        <h2 class="section-title">Our Portfolio</h2>
       </section>
     </main>
 
