--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>WebStudio</title>
 
     <!-- Google Fonts -->
@@ -20,56 +19,48 @@
 
   <body>
     <!-- ===== HEADER ===== -->
-    <header class="header">
-      <nav class="nav">
+    <header>
+      <nav>
         <a href="./index.html" class="logo">
           Web<span class="logo-studio">Studio</span>
         </a>
 
-        <ul class="nav-list">
-          <li>
-            <a href="./index.html" class="nav-link">Studio</a>
-          </li>
-          <li>
-            <a href="" class="nav-link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="nav-link">Contacts</a>
-          </li>
+        <ul>
+          <li><a href="./index.html" class="nav-link">Studio</a></li>
+          <li><a href="" class="nav-link">Portfolio</a></li>
+          <li><a href="" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="address">
-        <ul class="address-list">
+        <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address-link">
-              info@devstudio.com
-            </a>
+            <a href="mailto:info@devstudio.com" class="address-link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-link">
-              +11 (000) 111-11-11
-            </a>
+            <a href="tel:+110001111111" class="address-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <!-- ===== HERO ===== -->
+      <!-- ===== HERO (Section 1) ===== -->
       <section class="hero">
-        <h1 class="hero-title">
-          Effective Solutions for Your Business
-        </h1>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
       </section>
 
-      <!-- ===== ADVANTAGES (2 SECTION) ===== -->
+      <!-- ===== ADVANTAGES (Section 2) ===== -->
       <section class="advantages">
-        <h2 class="visually-hidden">Our Advantages</h2>
+        <h2 class="advantages-title">Our Advantages</h2>
 
-        <ul class="advantages-list">
-          <li class="advantages-item">
+        <ul>
+          <li>
             <h3 class="advantages-subtitle">Strategy</h3>
             <p class="advantages-text">
               Our goal is to identify the business problem to walk away with the
@@ -77,7 +68,7 @@
             </p>
           </li>
 
-          <li class="advantages-item">
+          <li>
             <h3 class="advantages-subtitle">Punctuality</h3>
             <p class="advantages-text">
               Bring the key message to the brand's audience for the best price
@@ -85,15 +76,15 @@
             </p>
           </li>
 
-          <li class="advantages-item">
+          <li>
             <h3 class="advantages-subtitle">Diligence</h3>
             <p class="advantages-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
 
-          <li class="advantages-item">
+          <li>
             <h3 class="advantages-subtitle">Technologies</h3>
             <p class="advantages-text">
               Design practice focused on digital experiences. We bring forth a
@@ -103,12 +94,11 @@
         </ul>
       </section>
 
-      <!-- ===== TEAM (3 SECTION) ===== -->
+      <!-- ===== TEAM (Section 3) ===== -->
       <section class="team">
-        <!-- 🔴 ВАЖЛИВО: той самий клас, що і в секції 2 -->
-        <h2 class="section-title">Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
 
-        <ul class="team-list">
+        <ul>
           <li class="team-item">
             <img
               src="./images/mark-guerrero.jpg"
@@ -147,6 +137,73 @@
             />
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- ===== PORTFOLIO (Section 4) ===== -->
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+
+        <ul>
+          <li class="portfolio-item">
+            <img
+              src="./images/banking-app.jpg"
+              alt="Banking App interface"
+              width="360"
+            />
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-type">App</p>
+          </li>
+
+          <li class="portfolio-item">
+            <img
+              src="./images/cashless-payment.jpg"
+              alt="Cashless Payment app interface"
+              width="360"
+            />
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-type">Marketing</p>
+          </li>
+
+          <li class="portfolio-item">
+            <img
+              src="./images/meditation-app.jpg"
+              alt="Meditation App interface"
+              width="360"
+            />
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-type">App</p>
+          </li>
+
+          <li class="portfolio-item">
+            <img
+              src="./images/taxi-service.jpg"
+              alt="Taxi Service app interface"
+              width="360"
+            />
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-type">Marketing</p>
+          </li>
+
+          <li class="portfolio-item">
+            <img
+              src="./images/screen-illustrations.jpg"
+              alt="Screen Illustrations design"
+              width="360"
+            />
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-type">Design</p>
+          </li>
+
+          <li class="portfolio-item">
+            <img
+              src="./images/online-courses.jpg"
+              alt="Online Courses interface"
+              width="360"
+            />
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-type">Marketing</p>
           </li>
         </ul>
       </section>
