--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
   <body>
     <!-- ===== HEADER ===== -->
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="nav">
         <a href="./index.html" class="logo">
           Web<span class="logo-studio">Studio</span>
         </a>
 
-        <ul>
+        <ul class="nav-list">
           <li><a href="./index.html" class="nav-link">Studio</a></li>
           <li><a href="" class="nav-link">Portfolio</a></li>
           <li><a href="" class="nav-link">Contacts</a></li>
@@ -33,7 +33,7 @@
       </nav>
 
       <address class="address">
-        <ul>
+        <ul class="address-list">
           <li>
             <a href="mailto:info@devstudio.com" class="address-link"
               >info@devstudio.com</a
@@ -59,8 +59,8 @@
       <section class="advantages">
         <h2 class="advantages-title">Our Advantages</h2>
 
-        <ul>
-          <li>
+        <ul class="advantages-list">
+          <li class="advantages-item">
             <h3 class="advantages-subtitle">Strategy</h3>
             <p class="advantages-text">
               Our goal is to identify the business problem to walk away with the
@@ -68,7 +68,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-subtitle">Punctuality</h3>
             <p class="advantages-text">
               Bring the key message to the brand's audience for the best price
@@ -76,7 +76,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-subtitle">Diligence</h3>
             <p class="advantages-text">
               Research and confirm brands that present the strongest digital
@@ -84,7 +84,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-subtitle">Technologies</h3>
             <p class="advantages-text">
               Design practice focused on digital experiences. We bring forth a
@@ -98,7 +98,7 @@
       <section class="team">
         <h2 class="team-title">Our Team</h2>
 
-        <ul>
+        <ul class="team-list">
           <li class="team-item">
             <img
               src="./images/mark-guerrero.jpg"
@@ -145,7 +145,7 @@
       <section class="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
 
-        <ul>
+        <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
               src="./images/banking-app.jpg"
